隐藏相应界面的文字,设置未开放的功能,解决退出后返回到主界面

--- a/app/src/main/res/layout/activity_contribution_map.xml
+++ b/app/src/main/res/layout/activity_contribution_map.xml
@@ -14,12 +14,12 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:background="@drawable/ic_background">
-        <TextView
+       <!-- <TextView
             style="@style/text_0e1214_20"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="18dp"
-            android:text="贡献图谱" />
+            android:text="贡献图谱" />-->
     <RelativeLayout
         android:id="@+id/rl_map"
         android:layout_width="300dp"
