--- a/app/src/main/res/layout/activity_user_parameter.xml
+++ b/app/src/main/res/layout/activity_user_parameter.xml
@@ -15,13 +15,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <TextView
+       <!-- <TextView
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:text="我的参数"
             style="@style/text_0e1214_17"
             android:layout_marginLeft="18dp"
-             />
+             />-->
 
         <LinearLayout
             android:layout_width="match_parent"
