--- a/app/src/main/res/layout/item_out_transfer_record.xml
+++ b/app/src/main/res/layout/item_out_transfer_record.xml
@@ -10,12 +10,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="对外转账凭证"
+            android:text="内部转账凭证"
             android:textColor="#000"
             />
 
         <TextView
-            android:id="@+id/tv_out_transfer_time"
+            android:id="@+id/tv_time"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="9dp"
