--- a/app/src/main/res/layout/activity_update_password.xml
+++ b/app/src/main/res/layout/activity_update_password.xml
@@ -39,7 +39,7 @@
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
                 android:hint="11位字母数字组合"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -62,7 +62,7 @@
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -85,7 +85,7 @@
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -111,7 +111,7 @@
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
                 android:hint="11位字母数字组合"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -134,7 +134,7 @@
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
@@ -157,7 +157,7 @@
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
                 android:gravity="center"
-                android:inputType="text"
+                android:inputType="textPassword"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
