--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -57,6 +57,7 @@
             android:digits="@string/input_impose_num_lower_case"
             android:gravity="center"
             android:inputType="textPersonName"
+            android:hint="用户名"
             android:maxLength="11"
             android:maxLines="1"
             android:textColor="@drawable/selector_edit_text_color" />
@@ -78,8 +79,9 @@
             android:layout_weight="3"
             android:background="@drawable/edit_text_style"
             android:gravity="center"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:maxLength="11"
+            android:hint="接点人帐号"
             android:maxLines="1"
             android:textColor="@drawable/selector_edit_text_color" />
 
