--- a/app/src/main/res/layout/item_in_transfer_record.xml
+++ b/app/src/main/res/layout/item_in_transfer_record.xml
@@ -10,7 +10,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:text="外部转账凭证"
+            android:text="内部转账凭证"
             android:textColor="#000"
             />
 
