--- a/app/src/main/res/layout/item_system_notice.xml
+++ b/app/src/main/res/layout/item_system_notice.xml
@@ -1,57 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:paddingTop="18dp"
-    android:paddingLeft="18dp"
-    android:paddingRight="18dp"
-    >
-<LinearLayout
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="9dp">
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="类别:" />
+
+        <TextView
+            android:id="@+id/tv_news_type"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1" />
+
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="标题:" />
+
+        <TextView
+            android:id="@+id/tv_news_subject"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="2" />
+    </LinearLayout>
+
     <TextView
-        android:layout_width="0dp"
+        android:id="@+id/tv_time"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="新闻编号:"
-        android:layout_weight="1"
-        />
-    <TextView
-        android:id="@+id/tv_news_id"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
-    <TextView
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="主题类别:"
-        android:layout_weight="1"
-        />
-    <TextView
-        android:id="@+id/tv_news_type"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        />
-</LinearLayout>
-   <LinearLayout
-       android:layout_width="match_parent"
-       android:layout_height="wrap_content">
-       <TextView
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:text="主题标题:"
-           android:layout_weight="1"
-           />
-       <TextView
-           android:id="@+id/tv_news_subject"
-           android:layout_width="0dp"
-           android:layout_height="wrap_content"
-           android:layout_weight="2"
-           />
-   </LinearLayout>
+        android:layout_gravity="end|bottom"
+        android:layout_marginTop="9dp"
+        style="@style/text_0e1214_15"
+        android:text="2017-01-18"
+        android:layout_marginRight="9dp"/>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/color_gray_eae8db"/>
+        android:layout_gravity="bottom"
+        android:background="@color/color_gray_eae8db" />
 </LinearLayout>
