--- a/app/src/main/res/layout/item_system_notice_with_text.xml
+++ b/app/src/main/res/layout/item_system_notice_with_text.xml
@@ -4,6 +4,10 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <include layout="@layout/item_image_with_text" />
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_global" />
+
     <include layout="@layout/item_system_notice" />
 </LinearLayout>
