--- a/app/src/main/res/layout/item_trading_list.xml
+++ b/app/src/main/res/layout/item_trading_list.xml
@@ -3,7 +3,8 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/color_gray_faf9f9">
+    android:padding="9dp"
+    android:background="@color/color_black_0e1419">
 
     <LinearLayout
         android:layout_width="0dp"
@@ -17,7 +18,7 @@
             android:layout_marginLeft="5dp"
             android:gravity="center"
             android:textStyle="bold"
-            android:textColor="#000"
+            android:textColor="@color/color_white_ffffff"
             android:textSize="20sp"
             android:text="挂买" />
         <LinearLayout
@@ -31,13 +32,21 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_weight="1">
+                <TextView
+                    android:id="@+id/tv_user_star"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:visibility="gone"
+                    style="@style/text_ffffff_15"
+                    />
                 <RatingBar
                     android:id="@+id/tv_user_level"
                     android:layout_marginLeft="5dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:progressTint="#FFD700"
+                    android:progressTint="@color/color_blue_4d8cd6"
                     android:stepSize="1"
+                    android:max="5"
                     style="?android:attr/ratingBarStyleSmall" />
             </LinearLayout>
 
@@ -46,7 +55,10 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:lines="1"
+                android:maxEms="11"
                 android:gravity="center"
+                style="@style/text_ffffff_15"
                 android:text="15231111111" />
         </LinearLayout>
         <LinearLayout
@@ -58,12 +70,14 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
+                style="@style/text_ffffff_15"
                 android:text="CCF :  " />
             <TextView
                 android:id="@+id/tv_ccf_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="100" />
+                android:text="100"
+                style="@style/text_ffffff_15"/>
         </LinearLayout>
     </LinearLayout>
     <LinearLayout
@@ -78,7 +92,7 @@
             android:layout_weight="7"
             android:gravity="center"
             android:text="0.102"
-            android:textColor="#ff0000"
+            android:textColor="@color/color_red_e51c23"
             android:textSize="20dp" />
         <TextView
             android:layout_width="0dp"
@@ -86,11 +100,11 @@
             android:text="$"
             android:gravity="center"
             android:textSize="20dp"
-            android:textColor="#ff0000"
+            android:textColor="@color/color_red_e51c23"
             android:layout_weight="3"/>
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:orientation="vertical"
@@ -102,7 +116,8 @@
             android:layout_marginRight="5dp"
             android:layout_width="wrap_content"
             android:layout_height="32dp"
-            android:background="@drawable/selector_button_bg"
+            android:background="@drawable/selector_btn_golder_bg"
+            style="@style/text_ffffff_15"
             android:text="购买" />
         <TextView
             android:id="@+id/tv_time"
@@ -110,8 +125,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|center"
             android:text="2018/1/16"
+            style="@style/text_ffffff_15"
             android:layout_marginTop="8dp" />
-    </LinearLayout>
-
-
+    </FrameLayout>
 </LinearLayout>
