--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -53,6 +53,7 @@
 
     <color name="color_black_373d41">#373d41</color>
     <color name="color_black_0e1214">#0E1214</color>
+    <color name="color_black_0e1419">#0E1419</color>
     <color name="color_black_0e1214_alpha_75">#BF0E1214</color>
     <color name="color_black_0e1214_alpha_85">#D90E1214</color>
     <color name="color_black_0d0d0d">#0d0d0d</color>
@@ -72,12 +73,15 @@
     <color name="color_orange_ffff00">#ffff00</color>
     <color name="color_orange_fade05">#fade05</color>
     <color name="color_orange_ffd161">#ffd161</color>
+    <color name="color_orange_efb42a">#efb42a</color>
 
 
     <color name="color_yellow_ffbb33">#ffbb33</color>
     <color name="color_yellow_fbb673">#fbb673</color>
-    <color name="color_yellow_f5543a">#f5543a</color>
+    <color name="color_red_f5543a">#f5543a</color>
 
     <color name="color_red_dc6068">#dc6068</color>
     <color name="color_red_fe4a4a">#fe4a4a</color>
+    <color name="color_red_ff0000">#ff0000</color>
+    <color name="color_red_e51c23">#e51c23</color>
 </resources>
