--- a/app/src/main/res/layout/activity_foreign_transfer.xml
+++ b/app/src/main/res/layout/activity_foreign_transfer.xml
@@ -17,13 +17,46 @@
         android:paddingLeft="38dp"
         android:paddingRight="48dp"
         android:paddingTop="17dp">
-
-      <!--  <TextView
-            style="@style/text_0e1214_17"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/one_level_height"
-            android:text="对外互转" />
--->
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="当前注册积分数量为:" />
+
+            <TextView
+                android:id="@+id/tv_register_integral"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="注册积分" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="当前用户ccf的数量为:"
+                />
+            <TextView
+                android:id="@+id/tv_ccf_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="ccf"
+                />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
