--- a/app/src/main/res/layout/item_hang_sell_buy_record.xml
+++ b/app/src/main/res/layout/item_hang_sell_buy_record.xml
@@ -124,6 +124,14 @@
                 android:text="11111"
                 />
         </LinearLayout>
+    <Button
+        android:id="@+id/btn_cancel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        style="@style/text_0e1214_15"
+        android:text="撤销"
+        android:background="@drawable/selector_button_bg"
+        />
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
