--- a/app/src/main/res/layout/fragment_cc_mall.xml
+++ b/app/src/main/res/layout/fragment_cc_mall.xml
@@ -3,9 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
-<TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="@string/cc_mall"
-    />
+    <WebView
+        android:id="@+id/wv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </WebView>
 </LinearLayout>
