点击cc商城中的主页返回到App的主页

--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -22,6 +22,7 @@
 
 
     <FrameLayout
+        android:id="@+id/fl_buttom_nav_bar"
         android:layout_width="match_parent"
         android:layout_height="39dp"
         android:layout_gravity="bottom"
