--- a/app/src/main/res/layout/activity_record_center.xml
+++ b/app/src/main/res/layout/activity_record_center.xml
@@ -19,19 +19,6 @@
         android:padding="18dp"
         android:orientation="vertical">
         <TextView
-            android:id="@+id/tv_to_out"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="对外转账记录"
-            style="@style/text_0e1214_17"
-            android:gravity="center_vertical"
-            android:background="@drawable/selector_text_view_bg"
-            />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_gray_eae8db"/>
-        <TextView
             android:id="@+id/tv_to_self"
             android:layout_width="match_parent"
             android:layout_height="32dp"
@@ -45,10 +32,10 @@
             android:layout_height="1dp"
             android:background="@color/color_gray_eae8db"/>
         <TextView
-            android:id="@+id/tv_step_record"
+            android:id="@+id/tv_to_out"
             android:layout_width="match_parent"
             android:layout_height="32dp"
-            android:text="步行记录"
+            android:text="对外转账记录"
             style="@style/text_0e1214_17"
             android:gravity="center_vertical"
             android:background="@drawable/selector_text_view_bg"
@@ -57,7 +44,9 @@
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/color_gray_eae8db"/>
-        <TextView
+
+
+     <!--   <TextView
             android:id="@+id/tv_contribute_value_record"
             android:layout_width="match_parent"
             android:layout_height="32dp"
@@ -79,23 +68,12 @@
             android:gravity="center_vertical"
             android:background="@drawable/selector_text_view_bg"
             />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="@color/color_gray_eae8db"/>
-        <TextView
-            android:id="@+id/tv_conversion_record"
-            android:layout_width="match_parent"
-            android:layout_height="32dp"
-            android:text="兑换循环包记录"
-            style="@style/text_0e1214_17"
-            android:gravity="center_vertical"
-            android:background="@drawable/selector_text_view_bg"
-            />
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/color_gray_eae8db"/>
+
         <TextView
             android:id="@+id/tv_e_wallet_record"
             android:layout_width="match_parent"
@@ -108,7 +86,7 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:background="@color/color_gray_eae8db"/>
+            android:background="@color/color_gray_eae8db"/>-->
         <TextView
             android:id="@+id/tv_shopping_record"
             android:layout_width="match_parent"
@@ -153,6 +131,45 @@
             android:layout_width="match_parent"
             android:layout_height="32dp"
             android:text="挂卖/挂买记录"
+            style="@style/text_0e1214_17"
+            android:gravity="center_vertical"
+            android:background="@drawable/selector_text_view_bg"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_gray_eae8db"/>
+        <TextView
+            android:id="@+id/tv_integral_record"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:text="用户积分记录"
+            style="@style/text_0e1214_17"
+            android:gravity="center_vertical"
+            android:background="@drawable/selector_text_view_bg"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_gray_eae8db"/>
+        <TextView
+            android:id="@+id/tv_step_record"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:text="步行记录"
+            style="@style/text_0e1214_17"
+            android:gravity="center_vertical"
+            android:background="@drawable/selector_text_view_bg"
+            />
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/color_gray_eae8db"/>
+        <TextView
+            android:id="@+id/tv_conversion_record"
+            android:layout_width="match_parent"
+            android:layout_height="32dp"
+            android:text="兑换循环包记录"
             style="@style/text_0e1214_17"
             android:gravity="center_vertical"
             android:background="@drawable/selector_text_view_bg"
