--- a/app/src/main/res/layout/fragment_call_back_by_phone_num.xml
+++ b/app/src/main/res/layout/fragment_call_back_by_phone_num.xml
@@ -24,6 +24,29 @@
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
+                android:text="用户名"
+                android:layout_weight="1"
+                />
+            <cn.cnlinfo.ccf.view.CleanEditText
+                android:id="@+id/et_user_code"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/edit_text_style"
+                android:layout_weight="3"
+                android:gravity="center"
+                android:inputType="text"
+                android:maxLines="1"
+                android:maxLength="11"
+                android:textColor="@drawable/selector_edit_text_color"
+                />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="18dp">
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
                 android:text="手机号"
                 android:layout_weight="1"
                 />
