--- a/app/src/main/res/layout/fragment_combo_upgrade.xml
+++ b/app/src/main/res/layout/fragment_combo_upgrade.xml
@@ -74,10 +74,10 @@
                 android:gravity="center"
                 android:layout_weight="1"/>
             <TextView
+                android:id="@+id/tv_tip_text"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="$等值碳控因子或积分"
                 android:layout_weight="2"/>
         </LinearLayout>
         <LinearLayout
