--- a/app/src/main/res/layout/activity_foreign_transfer.xml
+++ b/app/src/main/res/layout/activity_foreign_transfer.xml
@@ -102,10 +102,10 @@
                 android:layout_weight="3"
                 android:gravity="center"
                 android:inputType="text"
-                android:digits="@string/input_impose_num_lower_case"
+                android:digits="@string/input_impose_num_lower_upper_case"
                 android:maxLines="1"
                 android:maxLength="11"
-                android:hint="账号/电话号码"
+                android:hint="账号"
                 android:textColor="@drawable/selector_edit_text_color"
                 />
 
