--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -79,12 +79,12 @@
                         android:layout_marginTop="3dp"
                         android:gravity="center"
                         android:inputType="phone"
-                        android:digits="@string/input_impose_num_lower_case"
+                        android:digits="@string/input_impose_num_lower_upper_case"
                         android:maxLines="1"
                         android:maxLength="11"
                         android:textColor="@drawable/selector_edit_text_color"
                         android:background="@drawable/edit_text_style"
-                        android:hint="用户名/电话号码"/>
+                        android:hint="用户名"/>
                 </LinearLayout>
 
                 <LinearLayout
