--- a/app/src/main/res/layout/item_gv_info.xml
+++ b/app/src/main/res/layout/item_gv_info.xml
@@ -10,7 +10,7 @@
         android:id="@+id/item_tv_title"
         style="@style/text_0e1214_15"
         android:layout_width="wrap_content"
-        android:layout_height="20dp" />
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/item_tv_answer"
