--- a/app/src/main/res/layout/fragment_trading_center.xml
+++ b/app/src/main/res/layout/fragment_trading_center.xml
@@ -147,6 +147,7 @@
                                 android:background="@drawable/edit_text_style"
                                 android:gravity="center"
                                 android:hint="数量"
+                                android:inputType="numberDecimal"
                                 android:maxLength="5"
                                 android:maxLines="1" />
                         </LinearLayout>
@@ -170,6 +171,7 @@
                                 android:background="@drawable/edit_text_style"
                                 android:gravity="center"
                                 android:hint="安全密码"
+                                android:inputType="textPassword"
                                 android:maxLength="11"
                                 android:maxLines="1" />
                         </LinearLayout>
