--- a/app/src/main/res/menu/layout_trading_menu.xml
+++ b/app/src/main/res/menu/layout_trading_menu.xml
@@ -6,4 +6,7 @@
     <item
         android:id="@+id/buy"
         android:title="挂买"/>
+    <item android:id="@+id/match"
+        android:title="匹配"
+        />
 </menu>
