--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,19 @@
         <item name="textAppearanceLargePopupMenu">@style/MyTextAppearance</item>
         <item name="android:dropDownListViewStyle">@style/MyListViewStyle</item>
     </style>
+    <style name="anim_menu_bottombar">
+        <item name="android:windowEnterAnimation">@anim/menu_bottombar_in</item>
+        <item name="android:windowExitAnimation">@anim/menu_bottombar_out</item>
+    </style>
+
+    <style name="text_4d8cd6_15">
+        <item name="android:textColor">#4d8cd6</item>
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="text_colorPrimaryDark_15">
+        <item name="android:textColor">@color/colorPrimaryDark</item>
+        <item name="android:textSize">15sp</item>
+    </style>
 
     <style name="MyPopupMenu">
         <item name="android:popupBackground">@color/color_black_0e1214</item>
