注册用户中加入用户协议,替换主页banner图片,注册成员隐藏商家和代理注册，交易商升级

--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -202,7 +202,24 @@
                 android:text="获取" />
         </LinearLayout>
     </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="9dp">
+        <CheckBox
+            android:id="@+id/cb_is_read"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="9dp"
+            android:checked="true"/>
+        <TextView
+            android:id="@+id/tv_upgrade_agency_link"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            />
 
+    </LinearLayout>
     <Button
         android:id="@+id/btn_register_user"
         android:layout_width="69dp"
