--- a/app/src/main/res/layout/fragment_cc_mall.xml
+++ b/app/src/main/res/layout/fragment_cc_mall.xml
@@ -6,7 +6,9 @@
     <WebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layerType="software"
+        android:scrollbars="none">
 
     </WebView>
 </LinearLayout>
