--- a/app/src/main/res/layout/fragment_cc_mall.xml
+++ b/app/src/main/res/layout/fragment_cc_mall.xml
@@ -3,12 +3,31 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:id="@+id/load"
+        android:orientation="vertical" >
+
+        <ProgressBar
+            android:id="@+id/progressBar1"
+            android:layout_width="wrap_content"
+            android:indeterminateDrawable="@drawable/progress"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="12dp"
+            android:text="正在加载中..." />
+
+    </LinearLayout>
     <WebView
         android:id="@+id/wv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layerType="software"
-        android:scrollbars="none">
-
-    </WebView>
+        android:scrollbars="none"/>
 </LinearLayout>
