--- a/app/src/main/res/layout/fragment_cc_union.xml
+++ b/app/src/main/res/layout/fragment_cc_union.xml
@@ -6,6 +6,6 @@
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="@string/cc_union"
+    android:text="CC联盟还未开通，敬请期待!!!"
     />
 </LinearLayout>
