--- a/app/src/main/res/layout/fragment_cc_mall.xml
+++ b/app/src/main/res/layout/fragment_cc_mall.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layerType="hardware"
     android:gravity="center">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center"
         android:id="@+id/load"
+        android:visibility="gone"
         android:orientation="vertical" >
 
         <ProgressBar
