修改界面bug，文本框的输入类型和注册默认加上邀请码

--- a/app/src/main/res/layout/activity_platform_parameter.xml
+++ b/app/src/main/res/layout/activity_platform_parameter.xml
@@ -217,7 +217,7 @@
                         style="@style/text_0e1214_15"
                         android:layout_width="wrap_content"
                         android:layout_height="@dimen/height"
-                        android:text="待释放循环积分：" />
+                        android:text="待释放循环劵积分：" />
 
                     <TextView
                         android:id="@+id/tv_wait_free_cycle_points"
