--- a/app/src/main/res/layout/activity_internal_transfer.xml
+++ b/app/src/main/res/layout/activity_internal_transfer.xml
@@ -28,17 +28,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前注册积分为:" />
+                android:text="注册积分:  " />
 
             <TextView
                 android:id="@+id/tv_register_integral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="注册积分" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -47,17 +43,12 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前用户消费积分为:"
+                android:text="消费积分:  "
                 />
             <TextView
                 android:id="@+id/tv_consume_integral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="消费积分"
                 />
         </LinearLayout>
         <LinearLayout
@@ -68,17 +59,13 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前用户循环积分为:" />
+                android:text="循环积分:  " />
 
             <TextView
                 android:id="@+id/tv_cycle_integral"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="循环积分" />
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -87,20 +74,29 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="当前用户ccf的数量为:"
+                android:text="碳控因子:  "
                 />
             <TextView
                 android:id="@+id/tv_ccf_number"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="9dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="ccf"
+                android:text="产品积分:  "
+                />
+            <TextView
+                android:id="@+id/tv_product_points"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 />
         </LinearLayout>
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
