--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -78,7 +78,7 @@
                         android:layout_height="32dp"
                         android:layout_marginTop="3dp"
                         android:gravity="center"
-                        android:inputType="phone"
+                        android:inputType="text"
                         android:digits="@string/input_impose_num_lower_upper_case"
                         android:maxLines="1"
                         android:maxLength="11"
