--- a/app/src/main/res/layout/fragment_agency_upgrade.xml
+++ b/app/src/main/res/layout/fragment_agency_upgrade.xml
@@ -107,10 +107,10 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="3"
                 android:background="@drawable/edit_text_style"
-                android:digits="@string/input_impose_num"
+                android:digits="@string/input_impose_num_lower_upper_case"
                 android:gravity="center"
                 android:inputType="text"
-                android:hint="服务人员用户名"
+                android:hint="服务人员账号"
                 android:maxLength="11"
                 android:maxLines="1"
                 android:textColor="@drawable/selector_edit_text_color" />
