--- a/app/src/main/res/layout/fragment_register_user.xml
+++ b/app/src/main/res/layout/fragment_register_user.xml
@@ -81,7 +81,7 @@
             android:gravity="center"
             android:inputType="text"
             android:maxLength="11"
-            android:hint="接点人帐号"
+            android:hint="接点人账号"
             android:maxLines="1"
             android:textColor="@drawable/selector_edit_text_color" />
 
