修改订单中新和解决商城oppo手机不能点击跳转到商品详情的页面 选择省市县显示的地址名称

--- a/app/src/main/res/layout/activity_internal_transfer.xml
+++ b/app/src/main/res/layout/activity_internal_transfer.xml
@@ -59,7 +59,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="循环积分:  " />
+                android:text="碳控积分:  " />
 
             <TextView
                 android:id="@+id/tv_cycle_integral"
