--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -98,6 +98,23 @@
         <TextView
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:text="支付宝昵称:"
+            android:layout_weight="3"
+            />
+        <TextView
+            android:id="@+id/tv_alipay_nickname"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            />
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
             android:text="微信账号:"
             android:layout_weight="3"
             />
@@ -108,7 +125,23 @@
             android:layout_weight="7"
             />
     </LinearLayout>
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="真实姓名:"
+            android:layout_weight="3"
+            />
+        <TextView
+            android:id="@+id/tv_real_name"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="7"
+            />
+    </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
