--- a/app/src/main/res/layout/item_gv_info.xml
+++ b/app/src/main/res/layout/item_gv_info.xml
@@ -16,5 +16,7 @@
         android:id="@+id/item_tv_answer"
         style="@style/text_0e1214_15"
         android:layout_width="wrap_content"
-        android:layout_height="40dp" />
+        android:layout_height="40dp"
+        android:maxEms="6"
+        android:maxLength="6"/>
 </LinearLayout>
